# frequenz-api-common

./: .cookiecutter-replay.json  .gitignore  .gitmodules  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES.md  minimum-requirements-ci.txt  mkdocs.yml  pyproject.toml  setup.py
.github/: RELEASE_NOTES.template.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml
latest/protobuf-reference/SUMMARY/: index.html
latest/protobuf-reference/frequenz/api/common/components/: index.html
latest/protobuf-reference/frequenz/api/common/location/: index.html
latest/protobuf-reference/frequenz/api/common/metrics/: index.html
latest/python-reference/SUMMARY/: index.html
latest/python-reference/frequenz/api/common/: index.html
latest/python-reference/frequenz/api/common/components_pb2/: index.html
latest/python-reference/frequenz/api/common/components_pb2_grpc/: index.html
latest/python-reference/frequenz/api/common/location_pb2/: index.html
latest/python-reference/frequenz/api/common/location_pb2_grpc/: index.html
latest/python-reference/frequenz/api/common/metrics/: index.html
latest/python-reference/frequenz/api/common/metrics_pb2/: index.html
latest/python-reference/frequenz/api/common/metrics_pb2_grpc/: index.html
latest/python-reference/frequenz/api/common/v1/: index.html
next/: 404.html  index.html  objects.inv
next/CONTRIBUTING/: index.html
next/SUMMARY/: index.html
next/protobuf-reference/SUMMARY/: index.html
next/protobuf-reference/frequenz/api/common/components/: index.html
next/protobuf-reference/frequenz/api/common/location/: index.html
next/protobuf-reference/frequenz/api/common/metrics/: index.html
next/python-reference/SUMMARY/: index.html
next/python-reference/frequenz/api/common/: index.html
next/python-reference/frequenz/api/common/components_pb2/: index.html
next/python-reference/frequenz/api/common/components_pb2_grpc/: index.html
next/python-reference/frequenz/api/common/location_pb2/: index.html
next/python-reference/frequenz/api/common/location_pb2_grpc/: index.html
next/python-reference/frequenz/api/common/metrics/: index.html
next/python-reference/frequenz/api/common/metrics_pb2/: index.html
next/python-reference/frequenz/api/common/metrics_pb2_grpc/: index.html
next/python-reference/frequenz/api/common/v1/: index.html
next/search/: search_index.json
proto/frequenz/api/common/: battery.proto  common.proto  component_category.proto  components.proto  electrical.proto  inverter.proto  location.proto  metrics.proto
proto/frequenz/api/common/metrics/: electrical.proto
proto/frequenz/api/common/v1/: components.proto  lifetime.proto  location.proto  metrics.proto  microgrid.proto  pagination.proto  sensors.proto
proto/frequenz/api/common/v1/components/: battery.proto  data.proto  ev_charger.proto  fuse.proto  grid.proto  inverter.proto  transformer.proto
proto/frequenz/api/common/v1/grid/: delivery_area.proto  delivery_duration.proto
proto/frequenz/api/common/v1/market/: energy.proto  price.proto
proto/frequenz/api/common/v1/metrics/: bounds.proto  electrical.proto  metric_sample.proto
proto/frequenz/api/common/v1/microgrid/: lifetime.proto  microgrid.proto
proto/frequenz/api/common/v1/pagination/: pagination_info.proto  pagination_params.proto
proto/frequenz/api/common/v1/types/: decimal.proto
py/frequenz/api/common/: __init__.py
py/frequenz/api/common/v1/components/: __init__.py
pytests/: test_common.py  test_v0.py
v0.3/: index.html  objects.inv
v0.3/CONTRIBUTING/: index.html
v0.3/SUMMARY/: index.html
v0.3/protobuf-reference/SUMMARY/: index.html
v0.3/protobuf-reference/frequenz/api/common/location/: index.html
v0.3/python-reference/SUMMARY/: index.html
v0.3/python-reference/frequenz/api/common/components_pb2_grpc/: index.html
v0.3/python-reference/frequenz/api/common/location_pb2/: index.html
v0.3/python-reference/frequenz/api/common/metrics_pb2_grpc/: index.html
v0.3/search/: search_index.json
v0.4/: index.html
v0.4/CONTRIBUTING/: index.html
v0.4/python-reference/frequenz/api/common/v1/: index.html
v0.5/: 404.html  index.html  objects.inv
v0.5/CONTRIBUTING/: index.html
v0.5/SUMMARY/: index.html
v0.5/protobuf-reference/frequenz/api/common/components/: index.html
v0.5/protobuf-reference/frequenz/api/common/metrics/: index.html
v0.5/python-reference/SUMMARY/: index.html
v0.5/python-reference/frequenz/api/common/: index.html
v0.5/python-reference/frequenz/api/common/components_pb2/: index.html
v0.5/python-reference/frequenz/api/common/components_pb2_grpc/: index.html
v0.5/python-reference/frequenz/api/common/metrics_pb2_grpc/: index.html
v0.5/python-reference/frequenz/api/common/v1/: index.html
v0.5/search/: search_index.json
v0.6/: 404.html
v0.6/protobuf-reference/SUMMARY/: index.html
v0.6/search/: search_index.json
v0/protobuf-reference/SUMMARY/: index.html
v0/protobuf-reference/frequenz/api/common/components/: index.html
v0/protobuf-reference/frequenz/api/common/location/: index.html
v0/protobuf-reference/frequenz/api/common/metrics/: index.html
v0/python-reference/SUMMARY/: index.html
v0/python-reference/frequenz/api/common/: index.html
v0/python-reference/frequenz/api/common/components_pb2/: index.html
v0/python-reference/frequenz/api/common/components_pb2_grpc/: index.html
(+352 files in other folders)
