[build-system]
requires = [
  "setuptools == 67.7.2",
  "setuptools_scm[toml] == 7.1.0",
  "frequenz-repo-config[api] == 0.2.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "frequenz-api-common"
description = "Frequenz common gRPC API and bindings"
readme = "README.md"
license = { text = "MIT" }
keywords = ["frequenz", "api", "microgrid", "grpc", "common"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">= 3.11, < 4"
dependencies = [
  "googleapis-common-protos >= 1.56.2, < 2",
  "grpcio >= 1.51.1, < 2",
]
dynamic = ["version"]

[[project.authors]]
name = "Frequenz Energy-as-a-Service GmbH"
email = "floss@frequenz.com"

[project.optional-dependencies]
dev-docstrings = ["pydocstyle == 6.3.0", "darglint == 1.8.1"]
dev-formatting = ["black == 23.3.0", "isort == 5.12.0"]
dev-mypy = [
  "mypy == 1.3.0",
  # For checking the noxfile and tests
  "frequenz-api-common[dev-noxfile,dev-pytest]",
]
dev-noxfile = ["nox == 2023.4.22", "frequenz-repo-config[api] == 0.2.0"]
dev-pylint = [
  "pylint == 2.17.4",
  # For checking the noxfile and tests
  "frequenz-api-common[dev-noxfile,dev-pytest]",
]
dev-pytest = ["pytest == 7.3.1"]
dev = [
  "frequenz-api-common[dev-docstrings,dev-formatting,dev-mypy,dev-noxfile,dev-pylint,dev-pytest]",
]

[project.urls]
Changelog = "https://github.com/frequenz-floss/frequenz-api-common/releases"
Repository = "https://github.com/frequenz-floss/frequenz-api-common"
Issues = "https://github.com/frequenz-floss/frequenz-api-common/issues"
Support = "https://github.com/frequenz-floss/frequenz-api-common/discussions/categories/support"

[tool.setuptools.package-dir]
"" = "py"

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[tool.setuptools_scm]
version_scheme = "post-release"

[tools.pytest.ini_options]
testpaths = ["pytests"]
